--- a/learning/courses/utility-scale-quantum-computing/lesson-05-quantum-phase-estimation.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/lesson-05-quantum-phase-estimation.ipynb
@@ -5,15 +5,15 @@
    "id": "66dd0a62-b0ca-4de6-a2e9-d75cfb08c72c",
    "metadata": {},
    "source": [
-    "# 5. Quantum Algorithms: Phase estimation\n",
+    "# 5. Quantum algorithms: Phase estimation\n",
     "\n",
     "<Admonition type=\"note\">\n",
     "\n",
-    "Kento Ueda (May 15, 2024)\n",
+    "Kento Ueda (15 May 2024)\n",
     "\n",
     "This notebook provides the fundamental concepts and implementation of the Quantum Fourier Transformation (QFT) and Quantum Phase Estimation (QPE).\n",
     "\n",
-    "PDFs of lecture notes will be available soon and please note that some code snippets may become deprecated since these are static images.\n",
+    "PDFs of lecture notes will be available soon. Note that some code snippets may become deprecated since these are static images.\n",
     "\n",
     "*Approximate QPU time to run this experiment is 7 seconds.*\n",
     "\n",
@@ -32,7 +32,7 @@
     "The Quantum Fourier Transformation is the quantum counterpart of the classical discrete Fourier transform. It is a linear transformation applied to the quantum states, mapping computational bases into their Fourier basis representations. The QFT plays a key role in many quantum algorithms, offering an efficient method to extract periodicity information from quantum states.\n",
     "The QFT can be implemented with $O(N^2)$ operations with quantum gates such as Hadamard gates and Control-Phase gates for $N$ qubits, enabling exponential speedup over classical Fourier transformation.\n",
     "\n",
-    "- **Applications**: It is a foundational part in quantum algorithms such as Shor's algorithm for factoring large integers and discrete logarithm.\n",
+    "- **Applications**: It is a foundational part in quantum algorithms such as Shor's algorithm for factoring large integers and discrete logarithms.\n",
     "\n",
     "\n",
     "**Quantum Phase Estimation (QPE)**\n",
@@ -51,7 +51,7 @@
    "id": "4ba7fd89-5a7a-4e9b-9cbd-686f8aa743c6",
    "metadata": {},
    "source": [
-    "## 2. Basic of Quantum Fourier Transformation (QFT)"
+    "## 2. Basics of Quantum Fourier Transformation (QFT)"
    ]
   },
   {
