--- a/learning/courses/utility-scale-quantum-computing/lesson-03-teleportation.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/lesson-03-teleportation.ipynb
@@ -118,7 +118,7 @@
     "import numpy as np\n",
     "\n",
     "# create a random 1-qubit state from a random (theta, varphi) to define r vector\n",
-    "np.random.seed(1)  # fixing seed for repeatibility\n",
+    "np.random.seed(1)  # fixing seed for repeatability\n",
     "\n",
     "theta = np.random.uniform(0.0, 1.0) * np.pi  # from 0 to pi\n",
     "varphi = np.random.uniform(0.0, 2.0) * np.pi  # from 0 to 2*pi\n",
